--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "x-course-task",
-  "homepage": "https://bilets.github.io/x-course-task-react",
+  "homepage": "x-course-task-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
